# nextmv-py

./: .gitignore  README.md  main.py  main2.py  metrics.json  nextmv-py.code-workspace  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  publish.yml  python-lint.yml  python-test.yml  release.yml
examples/diabetes/: fit-decision-tree-regressor.py  fit-ensemble.py  fit-linear-regression.py  fit-mlp-regressor.py  fit-random-forest-regressor.py  linear-model.json  model-decision-tree-regressor.json  model-gradient-boosting-regressor.json  model-linear-regression.json  model-mlp-regressor.json  predict.py
examples/knapsack/: gurobi.lic  main.py
nextmv/: __about__.py  __init__.py  base_model.py  configuration.py  hello.py  input.py  logger.py  ndarray.py  options.py  output.py
nextmv/cloud/: __init__.py  acceptance_test.py  account.py  application.py  batch_experiment.py  client.py  input_set.py  manifest.py  package.py  status.py
nextmv/gurobipy/: __init__.py  options.py  solution.py  statistics.py
nextmv/nextroute/: __init__.py
nextmv/nextroute/check/: __init__.py  schema.py
nextmv/nextroute/schema/: __init__.py  base.py  input.py  location.py  output.py  stop.py  vehicle.py
nextmv/numpy/: __init__.py  ndarray.py
nextmv/pipelines/: __init__.py  decorators.py  flow.py  utils.py
nextmv/sklearn/: __init__.py  dummy.py  ensemble.py  linear_model.py  ndarray.py  neural_network.py  tree.py
test/: test_hello.py
tests/: configuration1.py  configuration2.py  configuration3.py  options1.py  options2.py  test_base_model.py  test_configuration.py  test_input.py  test_logger.py  test_options.py  test_output.py  test_version.py
tests/cloud/: test_client.py  test_package.py
tests/nextroute/schema/: output.json  output_with_check.json  test_input.py  test_output.py
tests/scripts/: options1.py  options3.py  options4.py  options5.py  options6.py  options7.py
