[build-system]
build-backend = "hatchling.build"
requires = ["hatchling >= 1.13.0"]

[project]
authors = [
    { email = "tech@nextmv.io", name = "Nextmv" }
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "pydantic>=2.5.2",
    "urllib3>=2.1.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
]
description = "The Python SDK for Nextmv"
dynamic = [
    "version",
]
keywords = [
    "decision engineering",
    "decision science",
    "decisions",
    "nextmv",
    "optimization",
    "operations research",
    "shift scheduling",
    "solver",
    "vehicle routing problem",
]
license = { file = "LICENSE" }
maintainers = [
    { email = "tech@nextmv.io", name = "Nextmv" }
]
name = "nextmv"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://www.nextmv.io"
Documentation = "https://www.nextmv.io/docs"
Repository = "https://github.com/nextmv-io/nextmv-py"

[tool.ruff]
target-version = "py38"
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
line-length = 120

[tool.hatch.version]
path = "nextmv/__about__.py"
